HTML and CSS is quite complete.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <title>Pixel Art Drawing</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;400;500;800&display=swap" rel="stylesheet">
+
     <script src="script.js" defer></script>
   </head>
 
   <body>
 
     <div class="tools">
-      <div class="pen 1"></div>
-      <div class="pen 2"></div>
-      <div class="pen 3"></div>
-      <div class="pen 4"></div>
-      <div class="eraser"></div>
+      <div class="pen one"></div>
+      <div class="pen two"></div>
+      <div class="pen three"></div>
+      <div class="pen four"></div>
+      <div class="clear">CLEAR</div>
+      <div class="grid-size">
+        <p>16 x 16</p>
+        <input type="range" min="0" max="100" step="1" value="16">
+      </div>
     </div>
 
     <div class="drawing-space">
