remove some pens and eraser

--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
   <body>
 
     <div class="tools">
-      <div class="pen one"></div>
-      <div class="pen two"></div>
-      <div class="pen three"></div>
-      <div class="pen four"></div>
+      <input type="color" class="pen" value="#0000FF">
       <div class="clear">CLEAR</div>
       <div class="grid-size">
         <p>16 x 16</p>
-        <input type="range" min="0" max="100" step="1" value="16">
+        <input type="range" min="1" max="30" step="1" value="16">
       </div>
     </div>
 
